--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,6 @@
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
     <link rel="manifest" href="{% static 'img/site.webmanifest' %}">
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/js/bootstrap.min.js" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -34,6 +33,7 @@
   {% include 'includes/scripts.html' %}
 
   <!-- Specific Page JS goes HERE  -->
-  {% block javascripts %}{% endblock javascripts %}  
+  {% block javascripts %}
+  {% endblock javascripts %}  
 </body>
 </html>
