--- a/templates/model-footer.html
+++ b/templates/model-footer.html
@@ -11,8 +11,17 @@
       <ul class="list-inline list-group-flush list-group-borderless text-md-end mb-0">
         <li class="list-inline-item px-0 px-sm-2"><a href="#">Missão</a></li>
         <li class="list-inline-item px-0 px-sm-2"><a href="#">Projetos</a></li>
-        <li class="list-inline-item px-0 px-sm-2"><a href="#">Login</a></li>
+        {% if user.is_authenticated %}
+          <li class="list-inline-item px-0 px-sm-2"><a href="admin/">Administradores</a></li>
+        {% else %}
+          <li class="list-inline-item px-0 px-sm-2"><a href="login/">Entrar</a></li>
+        {% endif %}
         <li class="list-inline-item px-0 px-sm-2"><a href="#">Contato</a></li>
+        {% if user.is_authenticated %}
+        <li class="list-inline-item px-0 px-sm-2">
+            <a href="admin/logout/">Sair</a>
+        </li>
+        {% endif %}
       </ul>
     </div>
   </div>
