--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link type="text/css" href="/static/vendor/sweetalert2/dist/sweetalert2.min.css" rel="stylesheet">
-    <link type="text/css" href="/static/vendor/notyf/notyf.min.css" rel="stylesheet">
-    <link type="text/css" href="/static/css/volt.css" rel="stylesheet">
+    <link type="text/css" href="{% static 'vendor/sweetalert2/dist/sweetalert2.min.css' %}" rel="stylesheet">
+    <link type="text/css" href="{% static 'vendor/notyf/notyf.min.css' %}" rel="stylesheet">
+    <link type="text/css" href="{% static 'css/volt.css' %}" rel="stylesheet">
   
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     
